[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfa.catalog.public"
version = "2025.12.08.0"
description = "CFA Public Catalog"
authors = [{name = "cfa-dataops"}]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cfa-dataops @ git+https://github.com/CDCgov/cfa-dataops.git@rr-58-update-get_df",
    "pandera[pandas] (>=0.25.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mako (>=1.3.9,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pandas (>=2.2.3)",
    "polars (>=1.26.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "faker (>=37.8.0,<38.0.0)",
    "PyGithub (>=2.8.1,<3.0.0)"
]

[tool.setuptools.packages.find]
namespaces = true
include = ["cfa*"]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.5)",
    "pytest-mock (>=3.14.0)",
    "pytest-cov (>=6.1.1)"
]

[project.scripts]
stf_nssp_gold_copy = "cfa.catalog.public.workflows.etl.stf.nssp_gold:copy_missing_files"
stf_nhsn_hrd_etl = "cfa.catalog.public.workflows.etl.stf.nhsn_hrd:etl"

[tool.pytest.ini_options]
addopts = "--doctest-modules -vv --cov=cfa --cov-report html --cov-report term"
